[gd_scene load_steps=5 format=2]

[ext_resource path="res://PlanetSelection.gd" type="Script" id=1]
[ext_resource path="res://ui/DynamicFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://objects/planets/sprites/Earth's Moon.png" type="Texture" id=3]
[ext_resource path="res://ui/EmptySpace_Background.png" type="Texture" id=4]

[node name="PlanetSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="."]
position = Vector2( 320, 180 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Select_Button" type="Button" parent="."]
margin_left = 288.0
margin_top = 328.0
margin_right = 351.0
margin_bottom = 351.0
custom_fonts/font = ExtResource( 2 )
text = "SELECT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Planet_Thumbnail_Container" type="ColorRect" parent="."]
margin_left = 192.0
margin_top = 272.0
margin_right = 448.0
margin_bottom = 304.0
color = Color( 0.0196078, 0.439216, 0.717647, 0.45098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Planet_Thumbnail_Container"]
margin_left = 40.0
margin_top = 8.0
margin_right = 214.0
margin_bottom = 22.0
text = "*thumbnails of all planets*"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left_Button" type="Button" parent="."]
margin_left = 64.0
margin_top = 128.0
margin_right = 97.0
margin_bottom = 161.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right_Button" type="Button" parent="."]
margin_left = 544.0
margin_top = 128.0
margin_right = 578.0
margin_bottom = 160.0
text = ">"

[node name="Planet_Sprite" type="Sprite" parent="."]
position = Vector2( 320, 152 )
scale = Vector2( 1.5, 1.4375 )
texture = ExtResource( 3 )

[node name="Label4" type="Label" parent="."]
margin_left = 424.0
margin_top = 40.0
margin_right = 602.0
margin_bottom = 88.0
text = "*popout panel with
 advantages/disadvantages 
of planet"

[node name="PlanetName_Label" type="Label" parent="."]
margin_left = 232.0
margin_top = 24.0
margin_right = 410.0
margin_bottom = 38.0
text = "Earth's Moon"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Select_Button" to="." method="_on_Select_Button_pressed"]
[connection signal="pressed" from="Left_Button" to="." method="_on_Left_Button_pressed"]
[connection signal="pressed" from="Right_Button" to="." method="_on_Right_Button_pressed"]
